@@ -1,3 +1,4 @@
+	* make need_save_resume() a bit more robust
 	* fixed sparse flag manipulation on windows
 	* fixed streaming piece picking issue
 
